# VERUM

./: .env.example  .gitattributes  .gitignore  Dockerfile.test  README.md  docker-compose.dev.yml  docker-compose.yml  guia_docker.md  guia_docker_make.md  makefile  output.txt  pyproject.toml
dashboard/: Dockerfile  app.py  requirements.txt
landing/: README.md  VERUM_landing_instructions.md  eslint.config.mjs  package-lock.json  package.json
models/nlp/: embeddings.py
models/vision/: architecture.py  evaluate.py  preprocess.py  train.py  train_v13.py
scripts/: README_eval.md  convert_raise_to_jpeg.py  diagnose_etl_verdicts.py  diagnose_output.txt  download_raise.py  eval_degradation.py  eval_local.py  eval_nlp.py  extract_mscocoai.py  pipeline_monitor.py  prepare_cifake.py  prepare_v11_dataset.py  prepare_v12_dataset.py  setup_webhook.sh  webhook_delete.sh  webhook_info.sh
scripts/build_dataset/: generate_fake.py  scrape_real.py
services/etl/: Dockerfile  requirements.txt
services/gateway/: Dockerfile  requirements.txt
services/worker_nlp/: Dockerfile  requirements.txt
services/worker_vision/: Dockerfile  requirements.txt
shared/: db.py  rabbitmq_utils.py  schemas.py
tests/: conftest.py  test_hf.py
tests/golden/: gold_nlp.jsonl
tests/test_etl/: test_pipeline.py
tests/test_gateway/: conftest.py  test_router.py
tests/test_integration/: conftest.py  test_nlp_pipeline.py
tests/test_shared/: test_rabbitmq_utils.py
tests/test_worker_nlp/: test_cache.py  test_ner.py  test_rag.py  test_schemas.py
tests/test_worker_vision/: test_grad_cam.py  (+2 more)
(+26 files in other folders)
